fix: correct layout issues with updated CSS

--- a/src/CheckoutProduct.css
+++ b/src/CheckoutProduct.css
@@ -31,3 +31,13 @@
   font-size: 17px;
   font-weight: 800;
 }
+
+@media screen and (max-width: 690px) {
+  .checkoutProduct {
+    display: flex;
+    flex-direction: column;
+  }
+  .checkoutProduct__image {
+    margin-bottom: 20px;
+  }
+}
